任務 09：練習使用 HttpInterceptor

--- a/src/app/posts/create/create.component.html
+++ b/src/app/posts/create/create.component.html
@@ -2,7 +2,7 @@
   <div class="container page">
     <div class="row">
       <div class="col-md-10 col-md-offset-1 col-xs-12">
-        <form (ngSubmit)="onSubmit(createForm)" [formGroup]="createForm">
+        <form (ngSubmit)="createPost()" [formGroup]="createForm">
           <fieldset class="form-group">
             <input
               formControlName="title"
